--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -72,6 +72,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
   </Tab.Panel>
   <Tab.Panel>
     <p>Expo Only tickets only include access to the Graduate School and Career Fair Expo.<br/>These tickets <b>do not include</b> any other programming or any meals.</p>
+    <p>If you are a recruiter, do not purchase tickets here. Reach out to your organization's conference contact for registration information.</p>
     <TicketTable type='expo'></TicketTable>
     <p>Scroll down for more information about purchasing tickets.</p>
     <br/>
@@ -80,7 +81,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     </CTAButton>
   </Tab.Panel>
   <Tab.Panel>
-    <p>If your company has an exhibitor or sponsorship package, please reach out to your company's conference contact for registration instructions. Tickets included with a package cannot be purchased from this page.</p>
+    <p>If your company/organization has an exhibitor or sponsorship package, please reach out to your organization's conference contact for registration instructions. Exhibitor and sponsor tickets may not be purchased from this page.</p>
     <p><b className='text-purple-700 dark:text-purple-300'>Do not purchase a ticket from this website unless oSTEM explicitly tells you to.</b></p>
     <p>If you have additional questions regarding this, please contact <a href='mailto:sponsorship@ostem.org'>sponsorship@ostem.org</a>.</p>
   </Tab.Panel>
