--- a/src/pages/2024/present/call-for-posters.mdx
+++ b/src/pages/2024/present/call-for-posters.mdx
@@ -15,6 +15,29 @@ import Image from "next/image";
 />
 <br />
 
+Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now accepting posters for the 14th Annual oSTEM Conference! Read on for more information.
+
+<div className="text-bright-peach font-bold">
+
+## Submission Milestones
+
+</div>
+
+- **June: **Request for Posters Released
+- **Ongoing: **Poster Acceptance Notifications
+- **September 1: **Deadline for Research Talk consideration
+- **September 30: **Deadline for Poster Submission
+- **September 30: **Research Talk Notification
+- **October 11: **Poster Presentation Number + Time email notification
+
+<div className="my-2 flex flex-col items-center sm:flex-row justify-center">
+  <div className="my-1 sm:mx-2">
+    <CTAButton onClick="https://www.jotform.com/form/241195822875162">
+      Submit a Poster Proposal
+    </CTAButton>
+  </div>
+</div>
+
 <div className="my-2 flex flex-col items-center sm:flex-row justify-center">
   <div className="my-1 sm:mx-2">
     <CTAButton onClick="https://cdn.ostem.org/publicfiles/oSTEM2023_Abstract_Book.pdf">
@@ -23,20 +46,18 @@ import Image from "next/image";
   </div>
 </div>
 
-Out in Science, Technology, Engineering, and Mathematics (oSTEM) has not yet started accepting posters for the in-person 14th Annual oSTEM Conference 2024.
-
-The oSTEM Annual Conference Poster Session is intended for undergraduate
-students, graduate students, and postdocs to showcase their research to other
-conference attendees. Anyone performing academic or industry research is invited
-to submit a poster for consideration.
-
 <div className="text-bright-peach font-bold">
 
-## Submission Milestones
+## Overview
 
 </div>
 
-- **TBD**: Call for posters released
+The oSTEM Annual Conference Poster Session is intended for any researcher to showcase their research to other conference attendees. Presenters will have the opportunity to opt into judging and poster prizes will be awarded in the following categories: Best Undergraduate Research Poster, Best Graduate Researcher, and Best Post-Doctoral Research. We will also facilitate the “People’s Choice” poster competition where conference participants are able to select their favorite poster! Poster awards will first be evaluated by the quality of the abstract submitted and the judging panel will select the top posters in each category to judge their poster presentation. Presenters will be notified the week before the conference if their poster will be visited for poster judging.  
+
+All abstract submissions should be submitted following the NIH Structured Abstracts guidelines. 
+Participants also have the opportunity in the same form to submit their work for a research talk. This will use the same abstract submission as the poster presentation. Research talks will be 10-minutes in length followed by 5-minutes for questions immediately following the presentation. These will occur during the workshop blocks throughout the weekend.  
+
+For full consideration for research talks, please submit prior to September 1, 2024. The final deadline to submit a poster is September 30, 2024. Poster submissions are rolling acceptance. 
 
 <div className="text-bright-peach font-bold">
 
@@ -44,13 +65,9 @@ to submit a poster for consideration.
 
 </div>
 
-Posters will be on display to all conference attendees during the day on
-Saturday. Poster submitters will be asked to remain with their poster and
-explain their research to interested attendees and judges during the Career and
-Graduate Fair Expo.
+The poster room will open at 8:00 AM on Saturday, October 19 and posters are expected to be on display by the start of the morning poster session. Poster Session 1 will be 10:30 - 11:30 AM where odd numbered posters will be presented while Poster Session 2 will be 2:30 - 3:30 PM for even numbered posters. 
+Awards will be announced in the poster room immediately following Workshop Block 5, and again at the oSTEM Gala dinner.
 
-Awards will be given out to the highest-scoring undergraduate, graduate, and
-postdoc posters!
 
 <div className="text-bright-peach font-bold">
 
@@ -60,23 +77,29 @@ postdoc posters!
 
 - **What are the recommended poster sizes?**
 
-  The maximum poster dimensions are 48" x 36".
+  The maximum poster dimensions are 48" (wide) x 36" (tall).
 
 - **Do I need to bring my poster? Can you print it for me?**
 
   Unfortunately, oSTEM cannot print your poster. We advise that you travel with
-  your poster.
-
-- **How will I know if my poster was accepted for the poster session?**
-
-  Posters will be accepted on a rolling basis and you will receive an email
-  before October to tell you the outcome of your poster submission.
+  your poster. Alternatively, a full service FedEx Office Print & Ship Center is located at 1605 NE 7th Ave, Portland, OR 97232 near the conference center.
 
 - **Do students participating in the poster session receive a conference registration discount?**
 
   No, participating in the poster session alone will not give you a conference discount. If you're interested in submitting a program proposal or panel topic proposal, you can get a discount there should your proposal be accepted.
 
-- **More FAQs will be put here once Call for Posters is open for 2024.**
+- **How will I know if my poster was accepted for a research talk?**  
+
+  If you indicate you are interested in a research talk, you will be contacted with the time and location of your presentation by the end of September. Poster acceptances are rolling, so you will likely receive a poster confirmation before your research talk. 
+
+- **When can I set my poster up?**
+  
+  Poster setup will be on Saturday morning and be available throughout the day on Saturday; feel free to take a moment free to wander through the posters during the day.
+
+- **I have a conflict with the times listed. Can you alter the presenting schedule to fit my needs?**
+
+  We cannot accommodate scheduling limitations. Submissions are expected to be available throughout the weekend for a research talk or Saturday for poster presentations. 
+
 
 <div className="text-bright-peach font-bold">
 
@@ -89,7 +112,7 @@ For more information about the conference visit [conference.ostem.org](https://c
 For more information about oSTEM visit [ostem.org](https://ostem.org).
 
 Please email our Conference Programming Committee at
-conference-programming@ostem.org with any questions.
+conference-programming@ostem.org with any additional questions.
 
 For inquiries regarding available conference accommodations or to request this
 document in an accessible format, please contact the Conference Accessibility
