Update navbar config for posters

--- a/src/pages/2024/present/call-for-posters.mdx
+++ b/src/pages/2024/present/call-for-posters.mdx
@@ -24,7 +24,7 @@ Out in Science, Technology, Engineering, and Mathematics (oSTEM) is now acceptin
 </div>
 
 - **June: **Request for Posters Released
-- **Ongoing: **Poster Acceptance Notifications
+- <span className='text-nav-green'><b>Ongoing:</b> Poster Acceptance Notifications</span>
 - **September 1: **Deadline for Research Talk consideration
 - **September 30: **Deadline for Poster Submission
 - **September 30: **Research Talk Notification
