Minor grammar improvements

--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -31,7 +31,7 @@ We have a wealth of general information on our conference Notion page. Topics in
 
 The 14<sup>th</sup> annual conference will be taking place at the <a href='https://www.oregoncc.org/en' target='_blank'>Oregon Convention Center</a> in Portland, OR.
 
-The address of the convention center is <b>777 NE Martin Luther King, Jr. Boulevard, Portland, OR 97232</b>.
+The address of the Convention Center is <b>777 NE Martin Luther King, Jr. Boulevard, Portland, OR 97232</b>.
 
 <br/>
 
@@ -39,12 +39,12 @@ The address of the convention center is <b>777 NE Martin Luther King, Jr. Boulev
 <div className='w-full'>
 <h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faPlane} className={"social-icon"} fixedWidth /> Plane</h3>
 
-The closest airport is Portland International Airport (PDX). The [TriMet MAX Red Line (light rail)](https://trimet.org/home/planner-trip?fromPlace=Portland%20Int%27l%20Airport%20MAX%20Station%20(ID%2010579)%3A%3A45.587584%2C-122.5931&toPlace=Convention%20Center%20MAX%20Station%3A%3A45.5300519305776%2C-122.661907990664&date=2024-06-09&time=17%3A21&arriveBy=false&mode=WALK%2CBUS%2CTRAM%2CRAIL%2CGONDOLA&showIntermediateStops=true&maxWalkDistance=1609&walkSpeed=1.34&ignoreRealtimeUpdates=false&numItineraries=1&otherThanPreferredRoutesPenalty=900&tripOption=1) offers a direct connection from the airport to the convention center and costs $2.80 each way.
+The closest airport is Portland International Airport (PDX). The [TriMet MAX Red Line (Light Rail)](https://trimet.org/home/planner-trip?fromPlace=Portland%20Int%27l%20Airport%20MAX%20Station%20(ID%2010579)%3A%3A45.587584%2C-122.5931&toPlace=Convention%20Center%20MAX%20Station%3A%3A45.5300519305776%2C-122.661907990664&date=2024-06-09&time=17%3A21&arriveBy=false&mode=WALK%2CBUS%2CTRAM%2CRAIL%2CGONDOLA&showIntermediateStops=true&maxWalkDistance=1609&walkSpeed=1.34&ignoreRealtimeUpdates=false&numItineraries=1&otherThanPreferredRoutesPenalty=900&tripOption=1) offers a direct connection from the airport to the Convention Center and costs $2.80 each way.
 </div>
 <div className='w-full'>
 <h3 className='text-green-900 dark:text-green-100'><FontAwesomeIcon icon={faTrain} className={"social-icon"} fixedWidth /> Train</h3>
 
-The [Amtrak PDX station](https://www.amtrak.com/stations/pdx) is the closest station to the Oregon Convention Center. Similar to PDX airport, you can take the light rail directly from the train station to the convention center.
+The [Amtrak PDX station](https://www.amtrak.com/stations/pdx) is the closest station to the Oregon Convention Center. Similar to PDX airport, you can take the Light Rail directly from the train station to the Convention Center.
 
 </div>
 <div className='w-full'>
@@ -64,14 +64,14 @@ If you're driving and need parking, please refer to [the OCC website for detaile
 
 ### General Lodging Information
 
-To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple hotel blocks</b> this year. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the light rail station and the convention center. Because we have multiple hotels this year, please note the following:
+To accomodate the increasing number of attendees each year, we are excited to announce that for the first time ever we are offering <b>multiple hotel blocks</b> this year. These hotels have discounted group rates available exclusively for attendees, and are all located close to both the Light Rail station and the Convention Center. Because we have multiple hotels this year, please note the following:
 
 - There are three general hotels that can be reserved by any attendee.
-  - All hotels are within 5 blocks of both the convention center and the light rail station.
-  - Limited rooms are available in a hotel adjacent to the convention center for those with accessibility and/or mobility concerns.  For more information on costs and availability please contact access@ostem.org. 
+  - All hotels are within 5 blocks of both the Convention Center and the Light Rail station.
+  - Limited rooms are available in a hotel adjacent to the Convention Center for those with accessibility and/or mobility concerns.  For more information on costs and availability please contact access@ostem.org. 
 - Hotel blocks are first come, first served.
   - This page will be updated weekly to indicate remaining capacity at each hotel. Once a hotel is full, you will not be able to make any reservations under our block.
-  - Reservations are available for booking Tuesday October, 15th through Monday October, 21st. Please note that Tuesday, Wednesday, and Sunday night availability is limited.
+  - Reservations are available for booking Tuesday, October 15th through Monday, October 21st. Please note that Tuesday, Wednesday, and Sunday night availability is limited.
 
 <br/>
 
