--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -23,18 +23,18 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     <h3 className="p-4 pt-3">2024 Conference Deadlines</h3>
     <div className="bg-primary rounded">
       <p className="p-4">
-        <b>Request for Proposals:</b> May 31, 2024 <br />
-        <b>Request for Panel Topics:</b> May 31, 2024 <br />
-        <b>Early Bird Registration:</b> June 30, 2024 <br />
+        <b>Request for Posters Released:</b> June <br />
+        <b>Poster Acceptance Notifications:</b> Ongoing <br />
+        <b>Deadline for Research Talk Submission:</b> September 1, 2024 <br />
+        <b>Deadline for Poster Submission:</b> September 30, 2024 <br />
+        <b>Research Talk Acceptance Notification:</b> September 30, 2024 <br />
+        <b>Poster Presentation and Time Assignment:</b> October 11, 2024 <br />
       </p>
       <p className='p-4'>Registration is open! All deadlines close at 11:59 PM EDT.</p>
       <div className="text-xl text-center p-2">
           
           <CTAButton onClick="/2024/attend/registration" backgroundColor="bright-peach" target='_self'> Registration Info</CTAButton>
-          <br/><br/>
-          <CTAButton onClick="/2024/present/request-for-programs" backgroundColor="ostem-blue" target='_self'> Submit a Proposal</CTAButton> &nbsp;
-          <CTAButton onClick="/2024/present/request-for-panel-topics" backgroundColor="ostem-blue" target='_self'> Submit a Panel Topic</CTAButton>
-      </div>
+          <br/></div>
     </div>
   </div>
   
