Add Travel Gay Portland

--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -134,4 +134,18 @@ Price: $212/day + Taxes
 </div>
 
 <br/>
+
+---
+
+<div className="text-nav-green font-bold">
+
+## Additional Resources
+
+</div>
+
+The following resources are third-party resources and are not affiliated or sponsored by oSTEM in any way.
+
+- **Travel Gay Portland** is a LGBTQ+ visitor center that offers a free baggage drop off at their visitor center along along with general information about Portland. For more info, please visit https://travelgayportland.com.
+
+<br/>
 </SiteLayout>
