Add Shepard Link

--- a/src/pages/2024/partner/resources.mdx
+++ b/src/pages/2024/partner/resources.mdx
@@ -13,7 +13,7 @@ Career Fair & Grad School Expo Floorplan: https://ostem2024.expofp.com
 oSTEM Exhibitor/ Sponsor Handbook: https://cdn.ostem.org/publicfiles/2024ExhibitorSponsorHandbook.pdf 
 - Includes key deadlines, conference schedule, programming highlights, registration information and other benefits provided by oSTEM. 
 
-Shepard Exhibitor Kit: **Coming Soon**
+Shepard Exhibitor Kit: https://apps.shepardes.com/olk/showInformation.asp?show=26722
 - Includes material handling and shipping information, and order forms for additional services.
 
 <br/>
