Add more accessibility info

--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -116,6 +116,11 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 </ul>
 <br/>
 
+
+<h4>Additional Information</h4>
+<p>Find information about our venue, discounted hotels, and more on our <a href='attendee-resources'>Attendee Resources page</a>.</p>
+<br/>
+
 ---
 
 <div className="text-nav-green font-bold text-center">
