Refund policy, poster extension

--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -64,9 +64,11 @@ If you're driving and need parking, please refer to [the OCC website for detaile
 
 For general accessibility questions, please email our accessibility team at access@ostem.org.
 
-During online registration we ask what accomodations you need. We aim to fulfill all reasonable accomodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accomodations may be more limited.
+During online registration we ask what accomodations you need. We aim to fulfill all reasonable accomodations requested by **August 31st**; after that date, we will do what we can but our ability to fulfill accomodations may be more limited. You can also email us for inquiries into accomodations.
 
-Exception: Starting **September 17th**, on-site reservations for wheelchairs and scooters can be made directly with OCC.
+For additional accessibility information available at the convention center, please visit https://www.oregoncc.org/en/accessibility.
+
+Mobility: Starting **September 17th**, on-site reservations for wheelchairs and scooters can be made directly with OCC.
 - A separate reservation is required for each day. 
 - Reservations may be made by contacting guestexperience@oregoncc.org or 503-731-7800.
 
