--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -116,7 +116,15 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
 </ul>
 <br/>
 
+<h4>Refunds and Exchanges</h4>
 
+Conference Refund & Transfer Policy:
+
+- **Partial Refund Deadlines: **Attendees who cancel their registration by September 19th will receive a partial refund of 75% of the registration fee (not including fees imposed by Whova). Attendees who cancel their registration by midnight PT September 30th will receive a partial refund of 50% of the registration fee (not including fees imposed by Whova). Requests for partial refunds must be submitted in writing to conference@ostem.org.
+- **No Refund Deadline: **No refunds will be issued for cancellations made after September 30th or for no-shows at the conference.
+- **Transfer Policy: **If you are unable to attend the conference, you may transfer your registration to another person. Substitution requests must be submitted in writing to conference@ostem.org by October 4, 2024
+
+<br/>
 <h4>Additional Information</h4>
 <p>Find information about our venue, discounted hotels, and more on our <a href='attendee-resources'>Attendee Resources page</a>.</p>
 <br/>
