Update and rename Community Heath & Safety.mdx to Community-Health-Safety.mdx
updates colors

--- a/src/pages/2024/attend/Community-Health-Safety.mdx
+++ b/src/pages/2024/attend/Community-Health-Safety.mdx
@@ -3,7 +3,7 @@ import { CTAButton } from "@/components/button/CTAButton";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
 import Image from "next/image";
 
-<SiteLayout title="Community Heath & Safety" accent="nav-green">
+<SiteLayout title="Community Health & Safety" accent="nav-green">
 <br />
 
 <div className="font-bold text-nav-green">
@@ -55,14 +55,14 @@ Seating: During workshops and programs, seating will be arranged close together.
 
 Hygiene: We encourage frequent, proper handwashing and use of hand sanitizer.  There may be a limited number of hand sanitizer stations around the conference venue.
 
-<div className="text-nav-purple">
+<div className="font-bold text-nav-green">
 
 ### You are the key!
 
 </div>
 Everyone has to do their part to keep oSTEM an inclusive and safe environment for all our attendees. By following CDC guidelines and adhering to the health and safety measures outlined in this document, you contribute to a positive experience for everyone. Your commitment to these practices ensures that we can gather together safely and continue to build a strong, supportive community at the oSTEM Annual Conference.
 
-<div className="text-nav-purple">
+<div className="text-teal-700 dark:text-teal-300">
 
 ### Additional resources and information
 
@@ -76,7 +76,7 @@ https://www.cdc.gov/covid/prevention/index.html<br /><br />
 Protecting yourself and others from influenza (flu):<br />
 https://www.cdc.gov/flu/prevent/prevention.htm<br />
 
-<div className="text-nav-purple">
+<div className="text-nav-blue">
 
 ### Sources
 
@@ -90,7 +90,6 @@ Centers for Disease Control and Prevention. (2024a, July 12). How to Protect You
 Centers for Disease Control and Prevention. (2024b, July 15). Testing for COVID-19. COVID-19. https://www.cdc.gov/covid/testing/index.html<br /><br />
 
 World Health Organization. (2024, August 14). WHO Director-General declares mpox outbreak a public health emergency of international concern. WHO; World Health Organization. https://www.who.int/news/item/14-08-2024-who-director-general-declares-mpox-outbreak-a-public-health-emergency-of-international-concern
-
 
 
 </SiteLayout>
