Preview expo materials

--- a/src/pages/2024/attend/attendee-resources.mdx
+++ b/src/pages/2024/attend/attendee-resources.mdx
@@ -5,7 +5,7 @@ import { FontAwesomeIcon } from "@fortawesome/react-fontawesome";
 import { faCar, faHotel, faPlane, faTrain } from '@fortawesome/free-solid-svg-icons';
 import Image from "next/image";
 
-<SiteLayout title="Attendee Resources" accent="purple">
+<SiteLayout title="Attendee Resources" accent="nav-green">
 <div className="text-nav-green font-bold">
 
 ## General Resources
