--- a/src/pages/2024/partner/resources.mdx
+++ b/src/pages/2024/partner/resources.mdx
@@ -16,6 +16,7 @@ oSTEM Exhibitor/ Sponsor Handbook: https://cdn.ostem.org/publicfiles/2024Exhibit
 Shepard Exhibitor Kit: https://apps.shepardes.com/olk/showInformation.asp?show=26722
 - Includes material handling and shipping information, and order forms for additional services.
 
+Exhibitor Registration: Your registration link and discount codes are provided to you via email. **Do not register through this website.** If you've lost your registration link and/or codes, please contact sponsorship@ostem.org.
 <br/>
 
 ---
