--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -26,7 +26,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
       <p className="p-4">
         <b>Request for Posters Released:</b> June <br />
         <b>Poster Acceptance Notifications:</b> Ongoing <br />
-        <b>Deadline for Research Talk Submission:</b> September 6, 2024 <TextBadge className='border-nav-green text-nav-green'>Extended!</TextBadge> <br />
+        <b>Deadline for Research Talk Submission:</b> September 6, 2024 <br />
         <b>Deadline for Poster Submission:</b> September 30, 2024 <br />
         <b>Research Talk Acceptance Notification:</b> September 30, 2024 <br />
         <b>Poster Presentation and Time Assignment:</b> October 11, 2024 <br />
