--- a/src/pages/2024/attend/expo.mdx
+++ b/src/pages/2024/attend/expo.mdx
@@ -7,7 +7,7 @@ import Image from "next/image";
 
 <SiteLayout title="Career Fair & Grad Expo" accent="nav-green">
 
-<div className="rounded md:col-span-5 mt-8 border-4 border-chill-green bg-chill-green border-solid">
+<div className="rounded md:col-span-5 mt-8 border-4 border-dark-teal bg-dark-teal border-solid">
   <h3 className="p-4 pt-3">Get Ready for the Conference: Webinar Series</h3>
   <div className='bg-primary rounded p-4 pb-6'>
       <p>Prepare yourself for a successful Expo with industry leaders through this series of webinars, each on a different topic.</p>
@@ -17,7 +17,7 @@ import Image from "next/image";
         <li>Making the Most of Career Fairs and Expos with The Allen Institute - Oct 2, 2024, 11:30 AM EDT/8:30 AM PDT</li>
       </ul>
       <br/>
-      <CTAButton onClick="https://ostem.webex.com/webappng/sites/ostem/webinar/webinarSeries/register/74b1cadbd3a7421da6268f319c7c8dae" backgroundColor="bright-peach" target='_self'> Register for Webinar</CTAButton>
+      <CTAButton onClick="https://ostem.webex.com/webappng/sites/ostem/webinar/webinarSeries/register/74b1cadbd3a7421da6268f319c7c8dae" backgroundColor="bright-peach" target='_blank'> Register for Webinar</CTAButton>
   </div>
 </div>
 
@@ -47,6 +47,8 @@ Please note that this list is subject to change.
 <h2>Floor Map</h2>
 </div>
 
-You can also preview the floor map for our career fair and grad expo here: [oSTEM 2024 Career Fair & Grad Expo Floor Map](https://ostem2024.expofp.com/)
+<div className="w-full h-full relative min-h-[400px] md:min-h-[600px]"><iframe className='w-full h-full absolute' src="https://oSTEM2024.expofp.com?allowConsent=false" allow="clipboard-read; clipboard-write"></iframe></div>
+
+The floor map can also be accessed as its own, full-screen window [here on ExpoFP](https://oSTEM2024.expofp.com).
 
 </SiteLayout>
