Saturday Schedule Update

--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -51,14 +51,15 @@ All times and events listed below are **tentative** and are subject to change.
 </div>
 
 - **7:00 AM:** Registration Desk / Help Desk opens
-- **8:00 AM:**  Poster room opens
-- **9:00 AM - 10:00 AM:** Workshop Block 6
-- **10:30 AM - 11:30 AM:** Poster Presentation 1
+- **8:00 AM:**  Poster Room opens
+- **8:30 AM - 9:30 AM:** Workshop Block 6
+- **9:30 AM - 10:30 AM:** Poster Presentation 1
+- **10:30 AM - 11:30 AM:** Poster Presentation 2
 - **11:00 AM - 3:00 PM:** Career and Graduate School Expo
-- **2:30 PM - 3:30 PM:** Poster Presentation 2
-- **4:00 PM - 5:00 PM:** Workshop Block 7
-- **5:00 PM - 6:30 PM:** Evening Networking Receptions (Sponsored)
-- **7:30 PM - 9:00 PM:** oSTEM Gala\*\*
+- **3:00 PM - 4:00 PM:** Workshop Block 7
+- **4:15 PM - 5:15 PM:** Plenary
+- **5:30 PM - 7:00 PM:** Sponsored Networking Sessions
+- **8:00 PM - 9:30 PM:** oSTEM Gala\*\*
 
 \*\* oSTEM Gala tickets are a paid add-on during registration.
 
