--- a/src/pages/2024/attend/expo.mdx
+++ b/src/pages/2024/attend/expo.mdx
@@ -21,11 +21,26 @@ import Image from "next/image";
   </div>
 </div>
 
+<div className="rounded md:col-span-5 mt-8 border-4 border-green-gray bg-green-gray border-solid">
+<h3 className="p-4 pt-3">Upload your Resumes Now!</h3>
+<div className='bg-primary rounded p-4 pb-6'>
+      
+Upload your resume on oSTEM's Career Center today and and be sure to check you are attending the 2024 oSTEM Conference!
+
+This increases your chances of receiving a job or internship interview at the 2-day Career Fair and Graduate School Expo.
+Need help getting started on your resume? In addition to your campus' career counseling office, [visit our Resume Resource bank here](https://ostem.notion.site/Conference-Attendee-Resources-679ca7be44f34c4ca6dace34ea5f8eca).
+
+<br/>
+<CTAButton onClick="https://careers.ostem.org" backgroundColor="bright-peach" target='_blank'> oSTEM Career Center</CTAButton>
+</div>
+</div>
+
 <div className="text-nav-green font-bold">
 <h2>Exhibitor List</h2>
 </div>
 
-Please note that this list is subject to change.
+Please note that this list is subject to change. **Exhibitors are not finalized.**
+
 
 <div>
   <div title="Whova event and conference app" id="whova-exhibitorwidget">
@@ -49,6 +64,6 @@ Please note that this list is subject to change.
 
 <div className="w-full h-full relative min-h-[400px] md:min-h-[600px]"><iframe className='w-full h-full absolute' src="https://oSTEM2024.expofp.com?allowConsent=false" allow="clipboard-read; clipboard-write"></iframe></div>
 
-The floor map can also be accessed as its own, full-screen window [here on ExpoFP](https://oSTEM2024.expofp.com).
+The floor map can also be displayed on its own. [Click here to open ExpoFP as a full-screen window.](https://oSTEM2024.expofp.com)
 
 </SiteLayout>
