Schedule updates, OAC entries

--- a/src/pages/2024/attend/schedule.mdx
+++ b/src/pages/2024/attend/schedule.mdx
@@ -1,6 +1,7 @@
 import { SiteLayout } from "@/components/layout/SiteLayout";
 import { CTAButton } from "@/components/button/CTAButton";
 import { TopicSquare } from "@/components/rfp/TopicSquare";
+import { TextBadge } from '@/components/badge/TextBadge';
 import Image from "next/image";
 
 <SiteLayout title="Schedule" accent="nav-green">
@@ -21,10 +22,12 @@ All times and events listed below are **tentative** and are subject to change.
 </div>
 
 - **12:00 PM:** Registration Desk / Help Desk opens
+- **12:00 PM - 1:30 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> OAC Meeting & Lunch
 - **1:30 PM - 2:00 PM:** New to the Conference Session
+- **2:00 PM - 5:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
 - **2:15 PM - 3:15 PM:** Workshop Block 1
 - **3:30 PM - 4:30 PM:** Workshop Block 2
-- **5:00 PM - 6:00 PM:** Membership Mixers
+- **5:00 PM - 6:30 PM:** Membership Mixers
 
 <div className="text-nav-blue">
 
@@ -34,6 +37,7 @@ All times and events listed below are **tentative** and are subject to change.
 
 - **7:00 AM:** Registration Desk / Help Desk opens
 - **8:00 AM - 9:00 AM:** Plenary Kick-off
+- **9:00 AM - 12:00 PM:** <TextBadge className='border-nav-pink text-nav-pink'>Invite Only</TextBadge> Allyship in Motion
 - **9:15 AM - 10:15 AM:** Workshop Block 3
 - **10:00 AM - 12:00 PM:** Career and Graduate Expo Success Clinic
 - **10:30 AM - 11:30 AM:** Workshop Block 4
@@ -59,7 +63,7 @@ All times and events listed below are **tentative** and are subject to change.
 - **3:00 PM - 4:00 PM:** Workshop Block 7
 - **4:15 PM - 5:15 PM:** Plenary
 - **5:30 PM - 7:00 PM:** Sponsored Networking Sessions
-- **8:00 PM - 9:30 PM:** oSTEM Gala\*\*
+- **8:00 PM - 9:30 PM:** <TextBadge className='border-nav-blue text-nav-blue'>Add-On</TextBadge> oSTEM Gala\*\*
 
 \*\* oSTEM Gala tickets are a paid add-on during registration.
 
