--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -125,12 +125,13 @@ Price: $199/day + Taxes
 <p><span className='text-pink-800 dark:text-pink-200'>435 NE Wasco St, Portland, Oregon 97232</span>
 <br/>(2 blocks to OCC, 2 blocks to Light Rail)</p>
 
-Price: $209/day + Taxes
+<span className='text-red-800 dark:text-red-200'><b>This hotel block is full</b>.</span>
+<br/>
 
 
-<a target='_blank' href='https://www.marriott.com/event-reservations/reservation-link.mi?id=1695847220664&key=GRP&app=resvlink' className='border-pink-400 text-pink-800 dark:text-pink-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block hover:bg-gray-400/25 transition focus-visible:bg-gray-500/30'>
-  Book Courtyard
-</a>
+<p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
+  Booking Unavailable
+</p>
 
 </div>
 <div className='w-full'>
