--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -159,6 +159,16 @@ Price: $212/day + Taxes
 
 <br/>
 
+### Meals
+
+Your collegiate/professional registration includes meals if made online. Meals are **not** included if you register on-site or if you purchase an expo-only pass.
+- There will be buffets for Friday breakfast and Friday lunch.
+- Vouchers will be provided for Saturday breakfast and Saturday lunch.
+- Gala tickets, if purchased, include Saturday dinner.
+- There may be additional sponsored events/socials with food.
+
+<br/>
+
 ---
 
 <div className="text-nav-green font-bold">
