--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -13,7 +13,7 @@ import Image from "next/image";
 
 </div>
 
-We have a wealth of general information on our conference Notion page. Topics include Building a Travel Request Proposal, Conference Attire, and more.
+We have a wealth of general information on our conference Notion page. Topics include Building a Travel Request Proposal, Conference Attire, and more. Please scroll down for information specific to this year's conference.
 
 <br/>
 <div className="text-l flex justify-center p-2">
@@ -77,7 +77,7 @@ Mobility: Starting **September 17th**, on-site reservations for wheelchairs and 
 
 <div className="text-nav-green font-bold">
 
-## Lodging
+## Lodging and Food
 
 </div>
 
