--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -99,7 +99,7 @@ To accomodate the increasing number of attendees each year, we are excited to an
 The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by September 24th, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
 
 <BannerMessage icon={faInfo} type='info' closeButton={false}>
-  Group rates are valid for <b>any number of days</b> between Wed 10/16 and Mon 10/21. <b>You do not have to stay the full period.</b><br/>Please note that most rooms are only available Thu 10/17 through Sun 10/20, so availability is limited outside that range.
+  We have secured the oSTEM room block discount for any length of stay between Wednesday, October 16 and Monday, October 21.
 </BannerMessage>
 
 <div className='flex flex-col md:flex-row gap-x-4'>
