--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -162,8 +162,10 @@ Price: $212/day + Taxes
 ### Meals
 
 Your collegiate/professional registration includes meals if made online. Meals are **not** included if you register on-site or if you purchase an expo-only pass.
-- There will be buffets for Friday breakfast and Friday lunch.
-- Vouchers will be provided for Saturday breakfast and Saturday lunch.
+- Friday breakfast (grab and go)
+- Friday lunch (buffet)
+- Saturday breakfast (grab and go)
+- Saturday lunch (voucher)
 - Gala tickets, if purchased, include Saturday dinner.
 - There may be additional sponsored events/socials with food.
 
