Hotel status update

--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -96,7 +96,7 @@ To accomodate the increasing number of attendees each year, we are excited to an
 
 ### Conference Hotels
 
-The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by September 24th, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
+The hotels listed below are all **first come, first served**. Hotels may be booked until they're full or by September 30th, 2024, whichever comes first. Once a hotel block is full, it will be removed from this page. All hotels have a 17% charge for taxes and fees.
 
 <BannerMessage icon={faInfo} type='info' closeButton={false}>
   We have secured the oSTEM room block discount for any length of stay between Wednesday, October 16 and Monday, October 21.
@@ -145,14 +145,13 @@ Price: $199/day + Taxes
 
 **Crowne Plaza Portland Downtown Convention Center**
 
-<p><span className='text-indigo-800 dark:text-indigo-200'>1441 NE 2nd Ave, Portland, OR 97232</span>
-<br/>(4 blocks to OCC, 4 blocks to Light Rail)</p>
+<span className='text-red-800 dark:text-red-200'><b>This hotel block is full</b>.</span>
+<br/>
 
-Price: $212/day + Taxes
 
-<a target='_blank' href='https://book.passkey.com/go/oSTEM24' className='border-indigo-400 text-indigo-800 dark:text-indigo-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block hover:bg-gray-400/25 transition focus-visible:bg-gray-500/30'>
-  Book Crowne Plaza
-</a>
+<p target='_blank' className='border-gray-400 text-gray-800 dark:text-gray-200 border-2 px-2 pt-0.5 pb-1 mt-4 inline-block'>
+  Booking Unavailable
+</p>
 
 </div>
 </div>
