--- a/src/pages/2024/attend/resources.mdx
+++ b/src/pages/2024/attend/resources.mdx
@@ -145,6 +145,10 @@ Price: $199/day + Taxes
 
 **Crowne Plaza Portland Downtown Convention Center**
 
+<p><span className='text-indigo-800 dark:text-indigo-200'>1441 NE 2nd Ave, Portland, OR 97232</span>
+<br/>(4 blocks to OCC, 4 blocks to Light Rail)</p>
+
+
 <span className='text-red-800 dark:text-red-200'><b>This hotel block is full</b>.</span>
 <br/>
 
