--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -2,7 +2,7 @@ import Image from "next/future/image";
 
 import { TextBadge } from '@/components/badge/TextBadge';
 import { CTAButton } from "../components/button/CTAButton";
-// import { ConferenceCountdown } from "../components/ConferenceCountdown";
+import { ConferenceCountdown } from "../components/ConferenceCountdown";
 import { SiteLayout } from "../components/layout/SiteLayout";
 
 <SiteLayout>
@@ -21,36 +21,19 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <div className="grid md:grid-cols-5">
   <div className="rounded md:col-span-5 mt-8 border-4 border-dark-teal border-solid bg-dark-teal">
-    <h3 className="p-4 pt-3">2024 Conference Deadlines</h3>
-    <div className="bg-primary rounded">
-      <p className="p-4">
-        <b>Request for Posters Released:</b> June <br />
-        <b>Poster Acceptance Notifications:</b> Ongoing <br />
-        <b>Deadline for Research Talk Submission:</b> September 6, 2024 <br />
-        <b>Deadline for Poster Submission:</b> September 30, 2024 <br />
-        <b>Research Talk Acceptance Notification:</b> September 30, 2024 <br />
-        <b>Poster Presentation and Time Assignment:</b> October 11, 2024 <br />
-        <br/><br/>
-        <b>Accomodation Request Deadline:</b> August 31, 2024 <br />
-        <b>Hotel Block Booking Deadline:</b> September 24, 2024 <br />
-        <b>Online Registration Deadline:</b> September 30, 2024 <br />
-      </p>
-      <p className='p-4'>Registration is open! All deadlines close at 11:59 PM EDT.</p>
-      <div className="text-xl text-center p-2">
-          
-          <CTAButton onClick="/2024/attend/registration" backgroundColor="bright-peach" target='_self'> Registration Info</CTAButton>
-          <br/></div>
-    </div>
-  </div>
-  
-  <div className="rounded md:col-span-5 mt-8 border-4 border-chill-green bg-chill-green border-solid">
     <h3 className="p-4 pt-3">14<sup>th</sup> Annual Conference in Portland, OR</h3>
-    <div className='bg-primary rounded'>
-      <p className="p-4">
-        We hope you will join us this year at the beautiful <b>Oregon Convention Center in Portland, OR</b> from October 17-20, 2024.
-        <br />
-        Online registration is open now until September 30. Register in June for an early-bird discount!
-      </p>
+    <div className="bg-primary text-center rounded">
+      <p className='pt-4'>Whova is our official event app this year. We are excited to see you soon!</p>
+      <ConferenceCountdown></ConferenceCountdown>
+      <div className="text-xl text-center p-2">
+        <CTAButton onClick="https://whova.com/portal/ostem_202411/" backgroundColor="ostem-blue" target='_blank'>Whova Portal</CTAButton>
+        &nbsp;&nbsp;&nbsp;
+        <CTAButton onClick="/2024/attend/resources" backgroundColor="bright-peach" target='_self'>Attendee Resources</CTAButton>
+        <br/>
+      </div>
+      <br/>
+      <hr className='border-dark-teal border-2'/>
+      <p className='p-4'>Online registration has closed. On-site registration will be available for late registrants.<br/>If you submitted a poster, decisions and time assignments will be released by October 11th.</p>
     </div>
   </div>
 
