[wip] tooltip, post ticket sale landing page

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -21,9 +21,9 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <div className="grid md:grid-cols-5">
   <div className="rounded md:col-span-5 mt-8 border-4 border-dark-teal border-solid bg-dark-teal">
-    <h3 className="p-4 pt-3">14<sup>th</sup> Annual Conference in Portland, OR</h3>
+    <h3 className="p-4 pt-3">2024 Conference</h3>
     <div className="bg-primary text-center rounded">
-      <p className='pt-4'>Whova is our official event app this year. We are excited to see you soon!</p>
+      <p className='pt-4'>We are excited to see you soon for our 14<sup>th</sup> Annual Conference!<br/>Make the most out of conference with our event app, Whova. <a>What is Whova?</a></p>
       <ConferenceCountdown></ConferenceCountdown>
       <div className="text-xl text-center p-2">
         <CTAButton onClick="https://whova.com/portal/ostem_202411/" backgroundColor="ostem-blue" target='_blank'>Whova Portal</CTAButton>
