--- a/src/pages/2024/attend/registration.mdx
+++ b/src/pages/2024/attend/registration.mdx
@@ -24,6 +24,8 @@ import landingImg from './registration-2024.png'
 We are pleased to invite you to the 14th Annual Conference in Portland, OR! Join
 us in a celebration of diversity across all fields.
 
+<p><b className='text-red-600 dark:text-red-300'>Online ticket sales are closed as of September 30, 11:59 PM EST.</b> No exceptions will be made. <br/>Tickets are available on-site for an additional cost. Please note that on-site tickets do not come with any food vouchers. Additionally, accommodations will be extremely limited due to the short turnaround.</p>
+
 <br />
 
 ---
@@ -37,8 +39,6 @@ us in a celebration of diversity across all fields.
 <TopicSquare title="Conference Ticket Pricing" borderColor="border-nav-green">
 
 Please pay attention to ticket deadlines, as they are **significantly earlier** than previous years. Ticket sales will open on June 1, 2024.
-
-<p><b className='text-red-600 dark:text-red-300'>All online ticket sales will close on September 30 at 11:59 PM EST.</b> No exceptions will be made. If you miss the online ticket window, you may purchase tickets on-site for an additional cost. Please note that on-site tickets do not come with any food vouchers. Additionally, accommodations will be extremely limited due to the short turnaround.</p>
 
 <p><b className='text-orange-700 dark:text-yellow-200'>Please submit accommodation requests by August 31.</b> You may request accomodations either during online registration or by emailing <a href='mailto:access@ostem.org'>access@ostem.org</a>. After August 31, our ability to provide accommodations will be more limited.</p>
 
@@ -57,18 +57,14 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     <p><b>Early Bird Discount:</b> Save $25 on registration tickets by purchasing them by June 30!</p>
     <p>Scroll down for more information about purchasing tickets and add-ons.</p>
     <br/>
-    <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/u4h5ecl9">
-      Purchase Collegiate Tickets
-    </CTAButton>
+    <p className='text-orange-700 dark:text-yellow-200'>Online ticket sales have closed.</p>
   </Tab.Panel>
   <Tab.Panel>
     <TicketTable type='professional'></TicketTable>
     <p><b>Early Bird Discount:</b> Save $50 on registration tickets by purchasing them by June 30!</p>
     <p>Scroll down for more information about purchasing tickets and add-ons.</p>
     <br/>
-    <CTAButton backgroundColor="ostem-blue" onClick="https://whova.com/portal/registration/ostem_202411/cmxb3vkv">
-      Purchase Professional Tickets
-    </CTAButton>
+    <p className='text-orange-700 dark:text-yellow-200'>Online ticket sales have closed.</p>
   </Tab.Panel>
   <Tab.Panel>
     <p>Expo Only tickets only include access to the Graduate School and Career Fair Expo.<br/>These tickets <b>do not include</b> any other programming or any meals.</p>
@@ -76,9 +72,7 @@ Please pay attention to ticket deadlines, as they are **significantly earlier** 
     <TicketTable type='expo'></TicketTable>
     <p>Scroll down for more information about purchasing tickets.</p>
     <br/>
-    <CTAButton backgroundColor="bright-peach" onClick="https://whova.com/portal/registration/ostem_202411/b2ymkt99">
-      Purchase Expo Only Tickets
-    </CTAButton>
+    <p className='text-orange-700 dark:text-yellow-200'>Online ticket sales have closed.</p>
   </Tab.Panel>
   <Tab.Panel>
     <p>If your company/organization has an exhibitor or sponsorship package, please reach out to your organization's conference contact for registration instructions. Exhibitor and sponsor tickets may not be purchased from this page.</p>
